[gd_scene load_steps=5 format=3 uid="uid://dkey7hwe3fsds"]

[ext_resource type="Script" path="res://UI/Dialog/dialog.gd" id="1_44bpe"]
[ext_resource type="Texture2D" uid="uid://d2em0sm3lo6hj" path="res://UI/Dialog/Dialogbox.png" id="1_f2qpm"]
[ext_resource type="FontFile" uid="uid://cacufwcmxolw7" path="res://UI/Font/PressStart2P-Regular.ttf" id="2_eqom7"]
[ext_resource type="Theme" uid="uid://dy7wlue6gsv5v" path="res://UI/Font/font.tres" id="3_0gfmr"]

[node name="Control" type="Node2D"]
position = Vector2(576, 639.7)
script = ExtResource("1_44bpe")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -375.0
offset_top = -240.0
offset_right = 375.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_f2qpm")

[node name="HeaderContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 0
offset_right = 624.0
offset_bottom = 32.0
scale = Vector2(1.2, 1.2)
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Header" type="Label" parent="TextureRect/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.670588, 0.670588, 0.670588, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_eqom7")
vertical_alignment = 1

[node name="Entry1" type="MarginContainer" parent="TextureRect"]
layout_mode = 2
offset_left = 8.0
offset_top = 37.0
offset_right = 627.63
offset_bottom = 189.51
scale = Vector2(1.2, 1.2)
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Entry1"]
layout_mode = 2

[node name="Button1" type="Button" parent="TextureRect/Entry1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0gfmr")
flat = true
alignment = 0

[node name="Button2" type="Button" parent="TextureRect/Entry1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0gfmr")
flat = true
alignment = 0

[node name="Button3" type="Button" parent="TextureRect/Entry1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0gfmr")
flat = true
alignment = 0

[node name="Button4" type="Button" parent="TextureRect/Entry1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0gfmr")
flat = true
alignment = 0

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 2
offset_left = 8.0
offset_top = 30.0
offset_right = 742.0
offset_bottom = 33.0
color = Color(0, 0, 0, 1)

[node name="DisplayTimer" type="Timer" parent="."]

[connection signal="pressed" from="TextureRect/Entry1/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="TextureRect/Entry1/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="TextureRect/Entry1/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="TextureRect/Entry1/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
